--- a/process/css/sections/_hero.css
+++ b/process/css/sections/_hero.css
@@ -3,15 +3,20 @@
 	h1 {
 		font-size: 2.72rem;
 		font-weight: normal;
-    font-family: MuseoSans-500,arial,helvetica,sans-serif;
-    margin: .275em 0;
-    vertical-align: text-top;
+		font-family: MuseoSans-500,arial,helvetica,sans-serif;
+		margin: .275em 0;
+		vertical-align: text-top;
+
+		span {
+			display: inline-block;
+		}
 	}
 
 	h1 span.text-logo {
 		font-family: MuseoSans-500,arial,helvetica,sans-serif;
 		font-weight: bold;
 		white-space: nowrap;
+		margin-right: .25em;
 	}
 	h1 div {
 		display: inline-block;
@@ -55,7 +60,7 @@
 		.sub-hero h2 {
 			text-align: center;
 			color: $goldyellow;
-			margin: 0 0 1em;
+			margin: 0 0 5%;
 			padding: .5em 0;
 			font-weight: normal;
 		}
